# parallel-in-cuda

./: CMakeLists.txt  README.md  build.sh
conv2d/: CMakeLists.txt  README.md  conv2d.cu
device_info/: CMakeLists.txt  device_info.cu
hellocuda/: CMakeLists.txt  hellocuda.cu
lib/: CMakeLists.txt
tile_matrixmult/: CMakeLists.txt  README.md  tile_matrixmult.cu
vec_add/: CMakeLists.txt  vec_add.cu
vec_add2/: CMakeLists.txt  README.md  vec_add2.cu
